# dopamine-core

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIRRORBORN_EXTENSIONS.md  README.md  SECURITY.md  pyproject.toml  test_shell_integration.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: README.md  advanced_features.py  exocortex_demo.py  langchain_trader.py  mirrorborn_agent.py
src/dopamine_core/: __init__.py  config.py  engine.py
src/dopamine_core/adapters/: __init__.py  base.py  crewai.py  langchain.py  openclaw.py
src/dopamine_core/backends/: __init__.py  phext.py
src/dopamine_core/distributional/: __init__.py  channels.py  coding.py
src/dopamine_core/exocortex/: __init__.py  aletheic.py  collective.py  phext_state.py  vak.py  wuxing.py
src/dopamine_core/extensions/: __init__.py  aletheic.py  collective.py  magitech.py
src/dopamine_core/injection/: context.py  domain_templates.py  templates.py
src/dopamine_core/persistence/: sq_adapter.py
src/dopamine_core/reward/: __init__.py  dual_mode.py  phasic.py  tonic.py
src/dopamine_core/signals/: __init__.py  llm_extractor.py  momentum.py  rpe.py
src/dopamine_core/timescale/: __init__.py  tracker.py
tests/: conftest.py  test_adapters.py  test_distributional.py  test_engine.py  test_momentum.py  test_reward.py  test_signals.py  test_timescale.py
