[project]
name = "dopamine-core"
version = "0.1.0"
description = "Intrinsic financial motivation middleware for AI agents — synthetic dopamine reward signals at inference time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Nick Liu" },
    { name = "Robert Wank" },
]
keywords = ["ai", "agents", "reinforcement-learning", "dopamine", "finance", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/DopamineCoreAI/dopamine-core"
Repository = "https://github.com/DopamineCoreAI/dopamine-core"
Issues = "https://github.com/DopamineCoreAI/dopamine-core/issues"
Documentation = "https://github.com/DopamineCoreAI/dopamine-core#readme"

[project.optional-dependencies]
numpy = ["numpy>=1.26"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dopamine_core"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
